NetBSD Problem Report #54074
From gson@gson.org Mon Mar 25 20:00:53 2019
Return-Path: <gson@gson.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
by mollari.NetBSD.org (Postfix) with ESMTPS id C79877A1C9
for <gnats-bugs@gnats.NetBSD.org>; Mon, 25 Mar 2019 20:00:53 +0000 (UTC)
Message-Id: <20190325200046.DE0B9989408@guava.gson.org>
Date: Mon, 25 Mar 2019 22:00:46 +0200 (EET)
From: gson@gson.org (Andreas Gustafsson)
Reply-To: gson@gson.org (Andreas Gustafsson)
To: gnats-bugs@NetBSD.org
Subject: Test cases ending in 32 fail on sparc64 since jemalloc update
X-Send-Pr-Version: 3.95
>Number: 54074
>Category: lib
>Synopsis: Test cases ending in 32 fail on sparc64 since jemalloc update
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: martin
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Mon Mar 25 20:05:00 +0000 2019
>Closed-Date: Fri Dec 06 18:31:11 +0000 2019
>Last-Modified: Fri Dec 06 18:31:11 +0000 2019
>Originator: Andreas Gustafsson
>Release: NetBSD-current, source date >= 2019.03.21.11.14.16
>Organization:
>Environment:
System: NetBSD
Architecture: sparc64
Machine: sparc64
>Description:
The following test cases are failing on sparc64:
usr.bin/c++/t_static_destructor/static_destructor32
usr.bin/c++/t_call_once2/call_once2_32
usr.bin/c++/t_hello/hello_profile_32
usr.bin/c++/t_pthread_once/pthread_once_profile_32
usr.bin/cc/t_hello/hello32
usr.bin/c++/t_call_once/call_once_32
usr.bin/c++/t_hello/hello32
usr.bin/c++/t_pthread_once/pthread_once_32
usr.bin/c++/t_cxxruntime/cxxruntime32
since this commit, "Switch sparc64 over to newer jemalloc":
2019.03.21.11.14.16 martin src/share/mk/bsd.own.mk 1.1114
Logs from my testbed (the TNF one is currently down, admins have been
notified):
http://www.gson.org/netbsd/bugs/build/sparc64/commits-2019.03.html#2019.03.21.11.14.16
Similar failures on martin's testbed:
http://www.netbsd.org/~martin/sparc64-atf/624_atf.html#failed-tcs-summary
>How-To-Repeat:
>Fix:
>Release-Note:
>Audit-Trail:
Responsible-Changed-From-To: lib-bug-people->martin
Responsible-Changed-By: gson@NetBSD.org
Responsible-Changed-When: Mon, 25 Mar 2019 20:08:00 +0000
Responsible-Changed-Why:
Over to committer.
From: "Takeshi Nakayama" <nakayama@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/54074 CVS commit: src/lib/libc/tls
Date: Thu, 21 Nov 2019 23:06:16 +0000
Module Name: src
Committed By: nakayama
Date: Thu Nov 21 23:06:16 UTC 2019
Modified Files:
src/lib/libc/tls: tls.c
Log Message:
Fix PR/54074 and PR/54093 completely.
More similar to the ld.elf_so logic, it is necessary to align with
p_align first. Also, invert the #ifdef condition for consistency.
Should fix regression for static linking binaries:
http://releng.netbsd.org/b5reports/sparc/commits-2019.11.html#2019.11.10.23.39.03
http://releng.netbsd.org/b5reports/sparc64/commits-2019.11.html#2019.11.16.04.10.33
To generate a diff of this commit:
cvs rdiff -u -r1.12 -r1.13 src/lib/libc/tls/tls.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/54074 CVS commit: [netbsd-9] src
Date: Tue, 26 Nov 2019 08:12:27 +0000
Module Name: src
Committed By: martin
Date: Tue Nov 26 08:12:27 UTC 2019
Modified Files:
src/lib/libc/tls [netbsd-9]: Makefile.inc tls.c
src/libexec/ld.elf_so [netbsd-9]: Makefile tls.c
src/usr.bin/ldd [netbsd-9]: Makefile.elf
Log Message:
Pull up following revision(s) (requested by nakayama in ticket #469):
lib/libc/tls/tls.c: revision 1.10
lib/libc/tls/tls.c: revision 1.11
lib/libc/tls/tls.c: revision 1.12
lib/libc/tls/tls.c: revision 1.13
libexec/ld.elf_so/tls.c: revision 1.13
libexec/ld.elf_so/tls.c: revision 1.14
libexec/ld.elf_so/Makefile: revision 1.142
lib/libc/tls/Makefile.inc: revision 1.3
usr.bin/ldd/Makefile.elf: revision 1.6
PR 54093: Align static TLS area to max_align_t.
Use alignof and not size_t for platforms with non-natural base
alignments.
Mirror the ld.elf_so logic for handling aligning the TLS size.
Most noticable, recompute the start of the TLS area for variant I
relative to the TCB. This makes a difference when the segment size and
base alignment don't agree.
Fix PR/54074 and PR/54093 completely.
More similar to the ld.elf_so logic, it is necessary to align with
p_align first. Also, invert the #ifdef condition for consistency.
Should fix regression for static linking binaries:
http://releng.netbsd.org/b5reports/sparc/commits-2019.11.html#2019.11.10.23.39.03
http://releng.netbsd.org/b5reports/sparc64/commits-2019.11.html#2019.11.16.04.10.33
To generate a diff of this commit:
cvs rdiff -u -r1.2 -r1.2.46.1 src/lib/libc/tls/Makefile.inc
cvs rdiff -u -r1.9 -r1.9.2.1 src/lib/libc/tls/tls.c
cvs rdiff -u -r1.141 -r1.141.2.1 src/libexec/ld.elf_so/Makefile
cvs rdiff -u -r1.12 -r1.12.2.1 src/libexec/ld.elf_so/tls.c
cvs rdiff -u -r1.5 -r1.5.30.1 src/usr.bin/ldd/Makefile.elf
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Fri, 06 Dec 2019 18:31:11 +0000
State-Changed-Why:
This tests are working again
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.49 2026/05/14 01:52:41 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.